# EELScript

./: LICENSE  README  README.md  eelscript.bat  pyproject.toml
src/EELScript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/eel/: BaseError.py  __init__.py  __main__.py  codepoints.py  errors.py  glbls.py  interval.py  streampi.py  thoughts.py  vm.py
src/eel/runtime/: DISP.py  __init__.py  components.py  eval.py  unpackage.py
src/eel/transformer/: __init__.py  lexer.py  linter.py  mask.py  tokens.py
